Sound, animation, UI click, animation click

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ Assets/Models/Dark UI/Shaders
 Assets/Models/Dark UI/Sounds
 Assets/Models/Dark UI/Textures
 # !Assets/Models/Dark UI/Scenes/*
+UserSettings/EditorUserSettings.asset
